--- a/index.html
+++ b/index.html
@@ -1,24 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" /> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
   
   <title>Frontend Mentor | Product preview card component</title>
 
   <!-- link stylesheet -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
   <main>
     <div class="card">
-      <div class="card__img" aria-label="Card image"></div>
+      <picture class="card__img">
+        <source media="(min-width: 38em)"
+                srcset="images/image-product-desktop.jpg" />
+        <img src="images/image-product-mobile.jpg" alt="Product Image" />
+      </picture>
 
       <div class="card__content">
-        <div class="card__category">Perfume</div>
+        <p class="card__category">Perfume</p>
         <h1 class="card__title">Gabrielle Essence Eau De Parfum</h1>
 
         <p class="card__description">
@@ -27,7 +31,7 @@
 
         <div class="card__price">
           <span class="card__price--current">$149.99</span>
-          <span class="card__price--previous">$169.99</span>
+          <s><span class="card__price--previous">$169.99</span></s>
         </div>
 
         <button class="card__button">
@@ -37,8 +41,6 @@
       </div>
     </div>
   </main>
-  
-  
-  
+
 </body>
 </html>
